--- a/data/templates/styles.html
+++ b/data/templates/styles.html
@@ -2,6 +2,7 @@ code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
 span.underline{text-decoration: underline;}
 div.column{display: inline-block; vertical-align: top; width: 50%;}
+div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
 $if(quotes)$
 q { quotes: "“" "”" "‘" "’"; }
 $endif$
