--- a/data/epub.css
+++ b/data/epub.css
@@ -22,3 +22,4 @@ span.smallcaps{ font-variant: small-caps; }
 span.underline{ text-decoration: underline; }
 q { quotes: "“" "”" "‘" "’"; }
 div.column{ display: inline-block; vertical-align: top; width: 50%; }
+div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
